--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,2 +1,9 @@
 [buildout]
+extensions =
+    mr.developer
 extends = buildout.d/development.cfg
+auto-checkout = PyODConverter
+always-checkout = force
+
+[sources]
+PyODConverter = git git@github.com:dieselpoweredkitten/pyodconverter.git
