--- a/travis.cfg
+++ b/travis.cfg
@@ -1,6 +1,14 @@
 [buildout]
+extensions =
+    mr.developer
+extends = buildout.d/development.cfg
+auto-checkout = PyODConverter
+always-checkout = force
+
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.3.x.cfg
     buildout.d/base.cfg
 parts = download install test
 
+[sources]
+PyODConverter = git git@github.com:dieselpoweredkitten/pyodconverter.git
