not connected version

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,4 +6,4 @@ auto-checkout = PyODConverter
 always-checkout = force
 
 [sources]
-PyODConverter = git git@github.com:dieselpoweredkitten/pyodconverter.git
+PyODConverter = git git://github.com/dieselpoweredkitten/pyodconverter.git pushurl=git@github.com:dieselpoweredkitten/pyodconverter.git
