use anonymous access git url

--- a/travis.cfg
+++ b/travis.cfg
@@ -10,5 +10,8 @@ extends =
     buildout.d/base.cfg
 parts = download install test
 
+[remotes]
+dieselpoweredkitten = git://github.com/dieselpoweredkitten
+
 [sources]
-PyODConverter = git git@github.com:dieselpoweredkitten/pyodconverter.git
+PyODConverter = git ${remotes:dieselpoweredkitten}/PyODConverter.git
