--- a/travis.cfg
+++ b/travis.cfg
@@ -14,4 +14,4 @@ parts = download install test
 dieselpoweredkitten = git://github.com/dieselpoweredkitten
 
 [sources]
-PyODConverter = git ${remotes:dieselpoweredkitten}/PyODConverter.git
+PyODConverter = git ${remotes:dieselpoweredkitten}/pyodconverter.git
