--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
   - mkdir -p buildout-cache/{eggs,downloads}
   - python bootstrap.py -c travis.cfg
   - bin/buildout -c travis.cfg
+  - apt-get install python-uno
+  - soffice --headless --accept="socket,port=2002;urp;"&
 script:
   - bin/test
 notifications:
