--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
 language: python
 python:
   - 2.7
+before_install:
+  - sudo apt-get install python-uno
 install:
   - mkdir -p buildout-cache/{eggs,downloads}
   - python bootstrap.py -c travis.cfg
-  - bin/buildout -c travis.cfg
-  - apt-get install python-uno
+  - bin/buildout -cN travis.cfg
+before_script:
   - soffice --headless --accept="socket,port=2002;urp;"&
 script:
   - bin/test
+after_script:
+  - killall soffice.bin
 notifications:
   email:
     - travis-reports@ecreall.com
