--- a/travis.cfg
+++ b/travis.cfg
@@ -8,10 +8,15 @@ always-checkout = force
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.3.x.cfg
     buildout.d/base.cfg
-parts = download install test
+parts = download install test regular-coverage
 
 [remotes]
 dieselpoweredkitten = git://github.com/dieselpoweredkitten
 
 [sources]
 PyODConverter = git ${remotes:dieselpoweredkitten}/pyodconverter.git
+
+[regular-coverage]
+# deploy the actual bin/coverage (which is not bin/coverage.sh)
+recipe = zc.recipe.egg
+eggs = createcoverage
