--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ script:
   - bin/test
 after_script:
   - killall soffice.bin
+  - pip install coveralls
+  - coveralls
 notifications:
   email:
     - travis-reports@ecreall.com
