travis: install libreoffice writer

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 python:
   - 2.7
 before_install:
-  - sudo apt-get install -qq python-uno
+  - sudo apt-get install -qq python-uno libreoffice-writer
   - sudo chmod 777 /tmp
 install:
   - mkdir -p buildout-cache/{eggs,downloads}
