--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,15 +1,17 @@
 [buildout]
 extensions =
     mr.developer
+parts += py3o
 extends = buildout.d/development.cfg
-auto-checkout = PyODConverter
-always-checkout = force
+
+[py3o]
+recipe = zc.recipe.egg
+eggs =
+    py3o.fusion
+    py3o.renderserver
 
 [remotes]
 tdesvenain = git://github.com/tdesvenain
 tdesvenain_push = git@github.com:tdesvenain
 dieselpoweredkitten = git://github.com/dieselpoweredkitten
 dieselpoweredkitten_push = git@github.com:dieselpoweredkitten
-
-[sources]
-PyODConverter = git ${remotes:dieselpoweredkitten}/PyODConverter.git pushurl=${remotes:dieselpoweredkitten_push}/PyODConverter.git
